fixed fb/insta alignment

--- a/src/less/homepage.less
+++ b/src/less/homepage.less
@@ -6,10 +6,6 @@
 }
 
 // *** services ***
-.homepage-services-wrapper {
-    background-color: @color-light-bg;
-}
-
 .homepage-services-heading {
     font-size: 36px;
     letter-spacing: -0.2px;
@@ -122,7 +118,7 @@
                 svg:nth-child(1) {
                     position: absolute;
                     top: 13%;
-                    left: 25%;
+                    left: 20%;
                 }
                 svg:nth-child(2) {
                     position: absolute;
